Added main page and display page

--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,19 +1,26 @@
 /**index.wxss**/
-.userinfo {
+.input-zone {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  color: #aaa;
+  gap: 20rpx;
 }
 
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.input-zone button {
+  width: 100%;
+  margin: 0;
 }
 
-.usermotto {
-  margin-top: 200px;
+.input-field {
+  background-color: rgb(235, 235, 235);
+  padding: 0.5rem;
+  border-radius: 4rpx;
+}
+
+.input-field-placeholder {
+  color: rgb(180, 180, 180);
+}
+
+.title {
+  text-align: center;
+  font-size: larger;
 }
