--- a/miniprogram/pages/display/display.wxml
+++ b/miniprogram/pages/display/display.wxml
@@ -1,20 +1,21 @@
 <!--pages/display/display.wxml-->
 <view class="container">
-  <view class="gp-container">
-    <view class="gp-content">
-      <text class="heading">Your generated page</text>
-      <text class="name">{{articleData[0]}}</text>
-      <text>Page title:</text>
-      <text>{{articleData[1]}}</text>
-      <text>Page URL:</text>
-      <navigator open-type="navigate" class="url" url="web-view?url={{encodeURIComponent(articleData[2])}}">{{articleData[2]}}</navigator>
-      <view class="qr">
-        <canvas id="qrc" canvas-id="qrc" class="qrc" type="2d"></canvas>
+  <view class="a-container psaver">
+    <view class="a-content psaver">
+      <text class="psaver" data-text='Article "{{articleData[0]}}"'>Article "{{articleData[0]}}"</text>
+      <text class="psaver" data-text="Article title:">Article title:</text>
+      <text class="psaver" data-text="{{articleData[1]}}">{{articleData[1]}}</text>
+      <text class="psaver" data-text="Page URL:">Page URL:</text>
+      <navigator open-type="navigate" class="url psaver" url="web-view?url={{encodeURI(articleData[2])}}" data-text="{{articleData[2]}}">{{articleData[2]}}</navigator>
+      <view class="qr psaver">
+        <image src="{{qrImage}}" class="qrc psaver"></image>
       </view>
     </view>
   </view>
-  <view class="bc">
+  <view class="buttons">
     <button type="primary" bindtap="save">Save</button>
     <button type="primary" bindtap="preview">Preview</button>
   </view>
+  <canvas id="qrc" type="2d" class="hcanvas"></canvas>
+  <canvas id="pagec" type="2d" class="hcanvas"></canvas>
 </view>
