--- a/miniprogram/pages/display/display.wxss
+++ b/miniprogram/pages/display/display.wxss
@@ -4,7 +4,7 @@
   align-items: stretch;
 }
 
-.gp-container {
+.a-container {
   flex-grow: 1;
   background-color: rgb(238, 238, 238);
   display: flex;
@@ -14,7 +14,7 @@
   padding: 2rem ;
 }
 
-.gp-content {
+.a-content {
   background-color: rgba(255, 255, 255, 0.8);
   flex-grow: 2;
   display: flex;
@@ -35,26 +35,27 @@
 }
 
 .qrc {
-  width: 100%;
-  height: 100%;
+  width: 7rem;
+  height: 7rem;
 }
 
 .heading {
   text-align: center;
-  font-size: larger;
+  font-size: 1.2rem;
 }
 
 .name {
   text-align: center;
 }
 
-.gp {
-  background-color: rgb(216, 216, 216);
-  flex-grow: 1;
-}
-
-.bc {
+.buttons {
   display: flex;
   flex-direction: row;
   gap: 1rem
+}
+
+.hcanvas {
+  position: absolute;
+  width: 0;
+  height: 0;
 }
