Added url check

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -6,6 +6,7 @@
       <input class="input-field" placeholder-class="input-field-placeholder"
       placeholder="{{input.name}}" bindinput="inputChange" data-id="{{input.id}}" />
     </block>
-    <button type="primary" bindtap="create" disabled="{{!allValueSet}}">Create</button>
+    <button type="primary" bindtap="create" disabled="{{!allSet || !validUrl}}">Create</button>
+    <text wx:if="{{!validUrl}}" style="text-align: center;">Invalid url</text>
   </view>
 </view>
