--- a/miniprogram/pages/display/display.wxml
+++ b/miniprogram/pages/display/display.wxml
@@ -2,10 +2,11 @@
 <view class="container">
   <view class="article-container _save" style="background-color: {{bgcolor}};">
     <view class="article-content _save">
-      <text class="wb _save" data-text='Article "{{articleData[0]}}"'>Article "{{articleData[0]}}"</text>
-      <text class="_save" data-text="Article title:">Article title:</text>
+      <text class="wb center _save" data-text="~ Article ~">~ Article ~</text>
+      <text class="wb center _save" data-text="{{articleData[0]}}">{{articleData[0]}}</text>
+      <text class="_save" data-text="Title:">Title:</text>
       <text class="wb _save" data-text="{{articleData[1]}}">{{articleData[1]}}</text>
-      <text class="_save" data-text="Page URL:">Page URL:</text>
+      <text class="_save" data-text="Link:">Link:</text>
       <text class="ww _save" data-text="{{articleData[2]}}">{{articleData[2]}}</text>
       <view class="qr _save">
         <image src="{{qrImage}}" class="qrc _save"></image>
@@ -27,7 +28,7 @@
         <text>Background color:</text>
         <view class="hflow">
           <block wx:for="{{colors}}" wx:for-item="color" wx:key="*this">
-            <button class="color-selector" size="mini" bindtap="setColor" data-color="{{color}}" style="background-color: {{color}};"></button>
+            <button class="color-selector {{bgcolor === color ? 'selected' : ''}}" size="mini" bindtap="setColor" data-color="{{color}}" style="background-color: {{color}};"></button>
           </block>
         </view>
         <view class="spacer"></view>
