--- a/miniprogram/pages/display/display.wxss
+++ b/miniprogram/pages/display/display.wxss
@@ -26,10 +26,7 @@ button:not([size=mini]) {
   align-items: stretch;
   justify-content: center;
   padding: 2rem ;
-}
-
-.color-selector {
-  height: 40rpx;
+  font-family: sans-serif;
 }
 
 .article-content {
@@ -40,14 +37,6 @@ button:not([size=mini]) {
   padding: 1rem;
   justify-content: space-between;
   gap: 20rpx;
-}
-
-.wb {
-  word-break: break-all;
-}
-
-.ww {
-  word-wrap: break-word;
 }
 
 .qr {
@@ -74,6 +63,14 @@ button:not([size=mini]) {
   display: flex;
   flex-direction: row;
   gap: 1rem
+}
+
+.color-selector {
+  height: 40rpx;
+}
+
+.color-selector.selected {
+  box-shadow: inset 0 0 0 2px rgba(61, 61, 61, 0.6);
 }
 
 .hcanvas {
