--- a/miniprogram/pages/display/display.wxml
+++ b/miniprogram/pages/display/display.wxml
@@ -2,18 +2,18 @@
 <view class="container">
   <view class="article-container _save" style="background-color: {{bgcolor}};">
     <view class="article-content _save">
-      <text class="wb center _save" data-text="~ Article ~">~ Article ~</text>
-      <text class="wb center _save" data-text="{{articleData[0]}}">{{articleData[0]}}</text>
-      <text class="_save" data-text="Title:">Title:</text>
-      <text class="wb _save" data-text="{{articleData[1]}}">{{articleData[1]}}</text>
-      <text class="_save" data-text="Link:">Link:</text>
-      <text class="ww _save" data-text="{{articleData[2]}}">{{articleData[2]}}</text>
+      <text class="wb heading center _save" data-text="~ Article ~">~ Article ~</text>
+      <text class="wb heading center _save" data-text="{{articleData[0]}}">{{articleData[0]}}</text>
+      <text class="subheading _save" data-text="Title:">Title:</text>
+      <text class="wb text _save" data-text="{{articleData[1]}}">{{articleData[1]}}</text>
+      <text class="subheading _save" data-text="Link:">Link:</text>
+      <text class="wb text _save" data-text="{{articleData[2]}}">{{articleData[2]}}</text>
       <view class="qr _save">
         <image src="{{qrImage}}" class="qrc _save"></image>
       </view>
     </view>
   </view>
-  <swiper current="{{index}}">
+  <swiper class="customization" current="{{index}}">
     <swiper-item class="s-item">
       <view class="vflow">
         <button type="primary" bindtap="setTab" data-tab="1">Customize</button>
@@ -36,9 +36,6 @@
       </view>
     </swiper-item>
   </swiper>
-
-
-
 </view>
 
 <canvas id="qrc" type="2d" class="hcanvas"></canvas>
