--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,12 +1,14 @@
 <!--index.wxml-->
 <view class="container">
   <view class="input-zone">
-    <text class="title">Article info</text>
-    <block wx:for="{{inputs}}" wx:key="id" wx:for-item="input">
+    <text class="title">Paper info</text>
+    <block wx:for="{{inputs}}" wx:key="key" wx:for-item="input">
+      <text>{{input.name}}{{input.required ? "*" : ''}}:</text>
       <input class="input-field" placeholder-class="input-field-placeholder"
-      placeholder="{{input.name}}" bindinput="inputChange" data-id="{{input.id}}" />
+      placeholder="{{input.name}}" bindinput="inputChange" data-key="{{input.key}}" />
     </block>
-    <button type="primary" bindtap="create" disabled="{{!allSet || !validUrl}}">Create</button>
+    <button type="primary" bindtap="create" disabled="{{!allSet || !validUrl}}">Create poster</button>
+    <text wx:if="{{!allSet}}" style="text-align: center;">Please, fill all requried fields</text>
     <text wx:if="{{!validUrl && allSet}}" style="text-align: center;">Invalid url</text>
   </view>
 </view>
