--- a/miniprogram/pages/display/display.wxml
+++ b/miniprogram/pages/display/display.wxml
@@ -1,50 +1,71 @@
 <!--pages/display/display.wxml-->
-<view class="container">
-  <view class="article-container _save" style="background-color: {{bgColor}};">
-    <image class="bgimage _save" src="{{bgImage}}" mode="aspectFill" hidden="{{bgImage === ''}}"></image>
-    <view class="article-content _save" style="background-color: {{bgImage === '' ? 'rgba(255, 255, 255, 0.8)' : 'rgba(255, 255, 255, 0.95)'}};">
-      <text class="wb heading center _save" data-text="~ Article ~">~ Article ~</text>
-      <text class="wb heading center _save" data-text="{{articleData['name']}}">{{articleData['name']}}</text>
-      <block wx:for="{{fields}}" wx:key="key" wx:for-item="field">
-        <block wx:if="{{articleData[field.key]}}">
-          <text class="subheading _save" data-text="{{field.name}}:">{{field.name}}:</text>
-          <text class="wb text _save" data-text="{{articleData[field.key]}}">{{articleData[field.key]}}</text>
+<view>
+  <view class="container">
+    <view class="article-container _save" style="background-color: {{bgColor}};">
+      <image class="bgimage _save" src="{{bgImage}}" mode="scaleToFill" hidden="{{bgImage === ''}}"></image>
+      <view class="article-content _save" style="background-color: {{bgImage === '' ? 'rgba(255, 255, 255, 0.8)' : 'rgba(255, 255, 255, 1)'}};">
+        <text class="wb heading center _save" data-text="~ Article ~">~ Article ~</text>
+        <text class="wb heading center _save" data-text="{{articleData['name']}}">{{articleData['name']}}</text>
+        <block wx:for="{{fields}}" wx:key="key" wx:for-item="field">
+          <block wx:if="{{articleData[field.key]}}">
+            <text class="subheading _save" data-text="{{field.name}}:">{{field.name}}:</text>
+            <text class="wb text _save" data-text="{{articleData[field.key]}}">{{articleData[field.key]}}</text>
+          </block>
         </block>
-      </block>
-      <view class="qr _save">
-        <image src="{{qrImage}}" class="qrc _save"></image>
+        <view class="qr _save">
+          <image src="{{qrImage}}" class="qrc _save"></image>
+        </view>
       </view>
     </view>
-  </view>
 
-  <view class="vflow">
-    <button type="primary" bindtap="customize" data-tab="1">Customize</button>
-    <view class="hflow">
-      <button type="primary" bindtap="preview" loading="{{pageImage.length<1}}" disabled="{{pageImage.length<1}}">Preview</button>
-      <button type="primary" bindtap="save" loading="{{pageImage.length<1}}" disabled="{{pageImage.length<1}}">Save</button>
-    </view>
-  </view>
-</view>
-
-<view class="overlay" hidden="{{!overlay}}">
-  <view class="spacer"></view>
-  <view class="overlay-content">
     <view class="vflow">
+      <button type="primary" bindtap="customize" data-tab="1">Customize</button>
       <view class="hflow">
-        <block wx:for="{{serverFrames}}" wx:key="*this" wx:index="index">
-          <button data-sfId="{{index}}" bindtap="setServerImage">{{index}}</button>
-        </block>
+        <button type="primary" bindtap="preview" loading="{{pageImage.length<1}}" disabled="{{pageImage.length<1}}">Preview</button>
+        <button type="primary" bindtap="save" loading="{{pageImage.length<1}}" disabled="{{pageImage.length<1}}">Save</button>
       </view>
-      <view class="hflow">
-        <button type="primary" bindtap="selectImage">Select image</button>
-        <button type="primary" bindtap="clearImage" disabled="{{bgImage === ''}}">Clear image</button>
-      </view>
-      <text>Background color:</text>
-      <colorpicker bindchange="setColor" r="{{bgRGB[0]}}" g="{{bgRGB[1]}}" b="{{bgRGB[2]}}"></colorpicker>
-      <button type="primary" bindtap="customize" data-tab="0">Return</button>
     </view>
   </view>
-</view>
 
-<canvas id="qrc" type="2d" class="hcanvas"></canvas>
-<canvas id="pagec" type="2d" class="hcanvas"></canvas>
+  <view class="overlay" wx:if="{{overlay}}">
+    <view class="spacer"></view>
+    <view class="overlay-content">
+      <view class="vflow">
+        <button type="primary" bindtap="toggleSf" disabled="{{serverFrames.length < 1}}">Toggle server frames</button>
+        <block wx:if="{{serverFramesVisible}}">
+          <view class="server-frames">
+            <view class="preview-flow">
+              <button class="frame-button" type="primary" disabled="{{serverFrameIndex < 1}}" bindtap="cycleFrame" data-next="{{false}}">{{"<"}}</button>
+              <view class="preview-container">
+                <image src="{{serverFrameUrl}}" class="preview-frame" binderror="err"></image>
+                <view class="preview-box">
+                  <view class="preview-content"></view>
+                </view>
+              </view>
+              <button class="frame-button" type="primary" bindtap="cycleFrame" data-next="{{true}}" disabled="{{serverFrameIndex + 1 >= serverFrames.length}}">{{">"}}</button>
+            </view>
+            <view style="text-align: center;">
+              {{serverFrameIndex + 1}}/{{serverFrames.length}}
+            </view>
+            <view class="hflow">
+              <button type="primary" bindtap="selectFrame">Select</button>
+              <button type="primary" bindtap="clearImage" disabled="{{bgImage === ''}}">Clear</button>
+            </view>
+          </view>
+        </block>
+        <block wx:else>
+          <view class="hflow">
+            <button type="primary" bindtap="selectImage">Select image</button>
+            <button type="primary" bindtap="clearImage" disabled="{{bgImage === ''}}">Clear image</button>
+          </view>
+        </block>
+        <text>Background color:</text>
+        <colorpicker bindchange="setColor" r="{{bgRGB[0]}}" g="{{bgRGB[1]}}" b="{{bgRGB[2]}}"></colorpicker>
+        <button type="primary" bindtap="customize" data-tab="0">Return</button>
+      </view>
+    </view>
+  </view>
+
+  <canvas id="qrc" type="2d" class="hcanvas"></canvas>
+  <canvas id="pagec" type="2d" class="hcanvas"></canvas>
+</view>
