--- a/miniprogram/pages/display/display.wxss
+++ b/miniprogram/pages/display/display.wxss
@@ -103,3 +103,50 @@ button:not([size=mini]) {
   padding: 30rpx;
   box-shadow: 0 0 10rpx 0 black;
 }
+
+.preview-flow {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.preview-container {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 50vw;
+  height: 40vh;
+  align-self: center;
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+
+.server-frames {
+  display: flex;
+  flex-direction: column;
+  gap: 20rpx;
+}
+
+.preview-frame {
+  box-sizing: border-box;
+  background-color: rgb(187, 187, 187);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.preview-box {
+  z-index: 2;
+  background-color: white;
+  margin: 20px;
+  height: 100%;
+}
+
+.preview-button {
+  height: 1rem;
+  flex-grow: 0;
+  flex-shrink: 1;
+}
