--- a/miniprogram/pages/customization/customization.wxss
+++ b/miniprogram/pages/customization/customization.wxss
@@ -16,9 +16,15 @@
 }
 
 .preview-flow {
+  width: 100%;
   display: flex;
   align-items: center;
-  gap: 30px;
+  justify-content: space-evenly;
+  justify-items: center;
+}
+
+.preview-button {
+  padding: 10rpx;
 }
 
 .preview-container {
@@ -28,7 +34,6 @@
   width: 50vw;
   height: 40vh;
   align-self: center;
-  flex-grow: 1;
   flex-shrink: 0;
 }
 
@@ -53,10 +58,4 @@
   background-color: white;
   margin: 20px;
   height: 100%;
-}
-
-.preview-button {
-  height: 1rem;
-  flex-grow: 0;
-  flex-shrink: 1;
 }
