--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -6,6 +6,13 @@
   gap: 20rpx;
 }
 
+.gp {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .input-zone button {
   width: 100%;
   margin: 0;
